--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     <title>List of Horrible Landlords Worldwide</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body
     <header>
         <h1>List of Horrible Landlords Worldwide</h1>
     </header>
